sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:16: error: value toBuble is not a member of Double
    ecart = (ecart.toBuble/1.3).toInt
                   ^